force-app/main/default/objects/Charket__WeChatEvent__c/Charket__WeChatEvent__c.object-meta.xml
<CustomObject>
    <label>WeChat Event</label>
    <nameField>
        <displayFormat>WE-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>