force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>Charket__ApexJobId__c</fullName>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>