force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__ErrorCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>