force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__ListViewId__c.field-meta.xml
<CustomField>
    <fullName>Charket__ListViewId__c</fullName>
    <label>List View ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>