force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__MassSendTo__c.field-meta.xml
<CustomField>
    <fullName>Charket__MassSendTo__c</fullName>
    <label>Mass Send To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>