force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__MessageDataId__c.field-meta.xml
<CustomField>
    <fullName>Charket__MessageDataId__c</fullName>
    <label>Message Data ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>