force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__MessageId__c.field-meta.xml
<CustomField>
    <fullName>Charket__MessageId__c</fullName>
    <label>Message ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>