force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__Status__c.field-meta.xml
<CustomField>
    <fullName>Charket__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commit Success</fullName>
            </value>
            <value>
                <fullName>Commit Failed</fullName>
            </value>
            <value>
                <fullName>Send Success</fullName>
            </value>
            <value>
                <fullName>Send Failed</fullName>
            </value>
            <value>
                <fullName>Approval Failed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>