force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__Type__c.field-meta.xml
<CustomField>
    <fullName>Charket__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>Subscribe</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Scan</fullName>
            </value>
            <value>
                <fullName>Menu click</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Keyword</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>