force-app/main/default/objects/Charket__WeChatEvent__c/fields/Charket__WeChatCoupon__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatCoupon__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WeChat Coupon</label>
    <referenceTo>Charket__WeChatCoupon__c</referenceTo>
    <relationshipLabel>WeChat Events</relationshipLabel>
    <relationshipName>WeChatEvents</relationshipName>
    <type>Lookup</type>
</CustomField>