force-app/main/default/objects/Charket__WeChatEvent__c/listViews/Charket__All.listView-meta.xml
<ListView>
    <fullName>Charket__All</fullName>
    <columns>NAME</columns>
    <columns>Charket__WeChatAccount__c</columns>
    <columns>Charket__Status__c</columns>
    <columns>Charket__SendBy__c</columns>
    <columns>Charket__MessageId__c</columns>
    <columns>Charket__ErrorCount__c</columns>
    <columns>Charket__FilterCount__c</columns>
    <columns>Charket__SentCount__c</columns>
    <columns>Charket__TotalCount__c</columns>
    <columns>Charket__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>